# POC-release

./: README.md
AstroAPI/: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
AstroAPI/api/: crud.py  db.py  error_handlers.py  exceptions.py  main.py  models.py  utils.py
AstroAPI/api/routes/: projects.py
AstroAPI/src/: gets.py  loaders.py  processors.py  utils.py
